--- a/404.html
+++ b/404.html
@@ -2,23 +2,10 @@
 layout: default
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+<h1 style="text-align: center;">404</h1>
 
-<div class="container">
-  <h1>404</h1>
+<h3 style="text-align: center;">Page not found</h3>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<p style="text-align: center;">The requested page is not available.
+
+Are you looking for some info about Bitrise that you could not find in our documentation? Or have you encountered a link error? Feel free to contact our support on <a href="https://www.bitrise.io">bitrise.io</a>. Thank you!</p>
